--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ yarn-debug.log*
 .yarn-integrity
 .framgia-ci-reports/
 .framgia-ci-result.temp.yml
+
+# Ignore application configuration
+/config/application.yml
