--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,6 @@ yarn-debug.log*
 .yarn-integrity
 .framgia-ci-reports/
 .framgia-ci-result.temp.yml
-
+/public/uploads/**
 # Ignore application configuration
 /config/application.yml
