--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
     "bootstrap": "4.5.3",
+    "cocoon": "github:nathanvda/cocoon#c24ba53",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
+    "select2": "^4.1.0-rc.0",
     "toastr": "^2.1.4",
     "turbolinks": "^5.2.0"
   },
