--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/fontawesome-free": "^5.15.1",
     "@nathanvda/cocoon": "^1.2.14",
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^6.0.3-5",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
@@ -14,6 +15,7 @@
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
     "toastr": "^2.1.4",
+    "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
